Closed Bug 110976 Opened 24 years ago Closed 24 years ago

libArt art_render doesn't fill certain paths correctly

Categories

(Core :: SVG, defect)

defect
Not set
major

Tracking

()

RESOLVED FIXED

People

(Reporter: jmt, Assigned: alex)

Details

Attachments

(1 file)

When a filled path completely spans the area of an ArtRender, the callback code in art_render_svp.c does not fill the row as it should. This is becuase an extra clause is absent from each of the callbacks, which can be readily seen by comparing with the non-'render' version. The attached patch adds the necessary clause to each of the four callbacks.
Reassinging to Alex, sorry for the spam
Assignee: dean.jackson → alex.fritze
Status: UNCONFIRMED → NEW
Ever confirmed: true
Checked in on SVG_0_9_6_BRANCH.
This fixes it, so checked onto main line.
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: