Bug 110976 - libart's art_render doesn't fill certain paths correctly. Patch by james.turner@crocodile-clips.com, not part of build.